--- a/1.Customisable Pizzas/app/src/main/AndroidManifest.xml
+++ b/1.Customisable Pizzas/app/src/main/AndroidManifest.xml
@@ -8,11 +8,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".pizzaApp.PizzaApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CustomisablePizzas">
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name="com.example.customisablepizzas.ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
