--- a/2.CodingAssingment_Unit-5/app/src/main/AndroidManifest.xml
+++ b/2.CodingAssingment_Unit-5/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Unit5Assignment">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
