--- a/4.AddressSearch_by_city/app/build.gradle
+++ b/4.AddressSearch_by_city/app/build.gradle
@@ -72,7 +72,19 @@ dependencies {
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.3.5")
     implementation("androidx.navigation:navigation-compose:2.4.0-beta02")
 
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    //Rx-Java
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+
+    //floating Search View
+    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+
+    //mockito
+    androidTestImplementation "org.mockito:mockito-core:2.27.0"
+    testImplementation "org.mockito:mockito-core:2.27.0"
+    testImplementation "android.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp:mockwebserver:3.6.0"
+
+
 
 }
